--- a/style.css
+++ b/style.css
@@ -349,6 +349,15 @@ footer p {
 }
 
 .article-image {
-  min-width: 100%;
-  text-align: center;
+  margin: 0;
+  padding: 0;
+  border-radius: 0; /* прибираємо округлення */
+  box-shadow: none; /* прибираємо тінь */
+}
+
+.article-image img {
+  width: 100vw;
+  height: auto;
+  display: block;
+  object-fit: cover;
 }
