--- a/style.css
+++ b/style.css
@@ -348,16 +348,4 @@ footer p {
   transition: width 0.6s ease; /* плавна анімація */
 }
 
-.article-image {
-  margin: 0;
-  padding: 0;
-  border-radius: 0; /* прибираємо округлення */
-  box-shadow: none; /* прибираємо тінь */
-}
-
-.article-image img {
-  width: 100vw;
-  height: auto;
-  display: block;
-  object-fit: cover;
-}
+.article-image { min-width: 100%; text-align: center; }
