--- a/style.css
+++ b/style.css
@@ -102,14 +102,10 @@ section:hover {
 /* === Заголовок статті (Article of the Week) === */
 .section-title {
   font-size: 34px; /* зробимо трохи більшим */
-  color: #9c22a5;
-  text-align: center; /* по центру */
+  color: #9c22a5;/* по центру */
   margin-bottom: 20px;
   font-weight: 600;
   letter-spacing: 0.5px;
-  text-transform: capitalize;
-  border-bottom: 2px solid #9c22a5;
-  display: inline-block;
   padding-bottom: 6px;
   width: 100%;
 }
