--- a/style.css
+++ b/style.css
@@ -515,4 +515,18 @@ footer p {
   padding-top: 8px;
 }
 
+/* === Тільки для Article of the Week === */
+.article-title {
+  text-align: center;
+  font-size: 34px;
+  letter-spacing: 0.6px;
+  border-bottom: 2px solid #9c22a5;
+  display: inline-block;
+  width: auto;
+  padding-bottom: 6px;
+  margin: 0 auto 25px;
+  color: #9c22a5;
+  font-weight: 600;
+}
+
 
